# mngr

./: .dockerignore  .gitignore  .offload-base-commit  .offload-image-cache  .pre-commit-config.yaml  .test_durations  .worktreeinclude  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_1.md  ARCHITECTURE_2.md  ARCHITECTURE_3.md  ARCHITECTURE_4.md  ARCHITECTURE_5.md  CHANGELOG.md  CLAUDE.md  DEPLOY_SAFETY_AUDIT.md  ELECTRON_BUNDLING_AUDIT.md  INVESTIGATION_NOTES.md  MANUAL_DEPLOY_FINDINGS.md  NEXT_TESTING_STEPS.md  OVH_AUDIT.md  README.md  TRIAGE.md  UNABRIDGED_CHANGELOG.md  aws_provider_brick_report.md  body.md  check_triage_issues.sh  conftest.py  issue_body.md  joke.txt  josh_taste.md  justfile  minds_background_process_audit.md  offload-modal-acceptance.toml  offload-modal-minds-snapshot.toml  offload-modal-release.toml  offload-modal.toml  pyproject.toml  remote-mind-recovery-bugs.md  (+5 more)
apps/minds/: .env.example  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  entitlements.mac.plist  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tailwind.config.js  tasks.md  test_aws_workspace_release.py  test_backup_service_release.py  test_bundled_git.py  test_desktop_client_e2e.py  test_forwarding_server_e2e.py  test_latchkey_e2e.py  test_snapshot_resume.py  test_sse_redirect.py  test_supertokens_auth_e2e.py  test_sync_e2e.py  todesktop.js  todesktop.json  vite.config.mjs  vitest.config.mjs
apps/minds/changelog/: add-modal.md  audacious-jackal.md  danver-define-bdd-scenarios-authentication.md  danver-define-bdd-scenarios.md  danver-embed-git.md  danver-minds-first-time-setup-docs.md  danver-minds-specs-mapreduce-fable.md  danver-minds-specs-tmr.md  danver-minor-minds-setup-grief.md  danver-witness-minds-auth-corpus.md  daring-labradoodle.md  deft-manul.md  design-system.md  ev-azure-update.md  fix-aws-tmpfs-run.md  fix-test-create-via.md  flaky-electron-e2e.md  gabriel-ancient-goshawk.md  gabriel-app-quit-behavior.md  gabriel-app-quit-quitting-page.md  gabriel-archetypal-mouse.md  gabriel-backup-failure.md  gabriel-create-from-github.md  gabriel-creation-error-state.md  gabriel-creation-status.md  gabriel-debug-kanjun.md  gabriel-discovery-watchdog-liveness-backoff.md  gabriel-discovery-watchdog.md  gabriel-error-reporting-continued.md  gabriel-error-reporting-issues.md  gabriel-error-reporting.md  gabriel-escalate-to-recovery.md  gabriel-faithful-firefly.md  gabriel-fix-minds-same-repo.md  gabriel-fix-restart.md  gabriel-git-deep-clone.md  gabriel-green-hedgehog.md  gabriel-http-2-forward-spec.md  gabriel-imperial-pheasant.md  gabriel-inquisitive-ocelot.md  (+326 more)
apps/minds/deployment_tests/: README.md  conftest.py  test_ci_env_litellm.py  test_deploy_new_version.py  test_deploy_rollback.py  test_deploy_round_trip.py  test_litellm_via_workspace.py  test_logged_in_smoke.py  test_quota_enforcement.py  test_signup_tunnel.py
apps/minds/docs/: architecture.d2  behavioral-specs.md  casa-compliance-audit.md  design.md  desktop-app.md  destroyed-host-still-listed.md  dev-setup.md  environments.md  error-recovery-audit.md  fast-agent-creation.md  host-pool-setup.md  latchkey-permissions.md  lima-image.md  overview.md  persistent-terminals.md  production-release-deployment.md  recovery-work-principles.md  release.md  security-boundaries-audit.md  staging-bringup.md  subsystem-recovery-updates.md  subsystem-resilience-report.md  subsystems-and-recovery.md  testing-overview.md  user_story.md  (+3 more)
apps/mngr_minds_eval/: CHANGELOG.md  README.md  SETUP.md  UNABRIDGED_CHANGELOG.md  eval-config-byo-small.json  eval-config-byo.json  eval-config-small.json  eval-config.json  pyproject.toml  realasks-eval-config.json  sample-eval-config.json  sample-personas.json  setup-r2.sh
apps/open-seer/: .betterleaks.toml  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  DESIGN.md  Dockerfile  README.md  UNABRIDGED_CHANGELOG.md  app.py  pyproject.toml  test_ratchets.py  tick.py
libs/llm_matched_responses/: llm_matched_responses.py  llm_matched_responses_test.py  pyproject.toml
libs/mng_tip/: pyproject.toml
libs/mngr_aws/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_azure/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_claude_usage/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_codex_usage/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_donate/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_foreman/: ASSETS.md  CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  pyproject.toml
libs/mngr_gcp/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_imbue_cloud/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_latchkey/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  pyproject.toml
libs/mngr_lima/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_opencode_usage/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_pi_coding_usage/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_robinhood/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_ssh_password_auth/: README.md  conftest.py  pyproject.toml
libs/mngr_subagent_proxy/: README.md  conftest.py  pyproject.toml
libs/mngr_uncapped_claude/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  pyproject.toml
libs/mngr_usage/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_vps/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  conftest.py  pyproject.toml
libs/mngr_vps_docker/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  pyproject.toml
libs/modal_proxy/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  pyproject.toml
libs/skitwright/: CHANGELOG.md  README.md  UNABRIDGED_CHANGELOG.md  pyproject.toml
(+7301 files in other folders)
