[project]
name = "imbue"
version = "0.1.0"
description = "Monorepo for Imbue projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest-xdist>=3.8.0",
    "ty>=0.0.39",
    "click>=8.0.0",
]

[tool.uv]
# Supply-chain cooldown: uv ignores any package uploaded after this timestamp
# when resolving, so we only adopt releases public long enough for malware to
# surface. scripts/release.py advances it to 2 weeks before each release, but
# only ever forward -- pushing it back would re-exclude a deliberately-pinned
# fresh dep and break resolution. This only buys a detection delay;
# it can't catch a compromise that stays undetected past the window.
exclude-newer = "2026-06-04T00:00:00Z"

[tool.uv.sources]
imbue-common = { workspace = true }
overlay = { workspace = true }

[tool.uv.workspace]
members = ["libs/*", "apps/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff~=0.12.8",
    "pytest>=9.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-split>=0.9.0",
    # really just for debugging slow tests
    "pytest-profiling",
    "line-profiler",
    "import-linter>=2.0",
    "semver>=3.0",
    "tomlkit>=0.12.0",
    "imbue-common[dev]",
    "shellcheck-py>=0.10.0",
    # In-memory AWS service mocks for unit tests (S3 state-bucket round-trips).
    "moto[s3]>=5.0",
]

# Shared pytest settings (markers, filterwarnings, coverage report config)
# are centralized in:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# The settings below remain here because they are read from pyproject.toml
# before any hooks run: addopts, coverage.run, inline-snapshot, timeout_func_only.
[tool.pytest.ini_options]
# Only timeout the test function itself, not fixtures. This is required because
# --timeout-method=signal sends SIGALRM which kills the entire xdist worker process
# if it fires during fixture setup/teardown (especially the session-scoped cleanup).
timeout_func_only = true
# Use xunit1 format to enable record_xml_attribute fixture for consistent classnames
junit_family = "xunit1"
pythonpath = [
  "apps/*",
  "libs/*",
]
testpaths = [
  "test_meta_ratchets.py",
  "apps/*",
  "libs/*",
  "scripts",
]
addopts = [
  "--cov=imbue.mngr",
  "--cov=imbue.imbue_common",
  "--cov=imbue.resource_guards",
  "--cov=imbue.overlay",
  "--cov=imbue.mngr_claude",
  "--cov=imbue.mngr_claude_subagent_proxy",
  "--cov=imbue.mngr_opencode",
  "--cov=imbue.mngr_antigravity",
  "--cov=imbue.mngr_codex",
  "--cov=imbue.mngr_pi_coding",
  "--cov=imbue.mngr_pair",
  "--cov=imbue.mngr_schedule",
  "--cov=imbue.mngr_ttyd",
  "--cov=imbue.mngr_tutor",
  "--cov=imbue.mngr_kanpan",
  "--cov=imbue.mngr_usage",
  "--cov=imbue.mngr_claude_usage",
  "--cov=imbue.mngr_opencode_usage",
  "--cov=imbue.mngr_pi_coding_usage",
  "--cov=imbue.mngr_codex_usage",
  "--cov=imbue.mngr_recursive",
  "--cov=imbue.mngr_latchkey",
  "--cov=imbue.mngr_notifications",
  "--cov=imbue.mngr_file",
  "--cov=imbue.mngr_forward",
  "--cov=imbue.mngr_imbue_cloud",
  "--cov=imbue.mngr_lima",
  "--cov=imbue.mngr_tmr",
  "--cov=imbue.mngr_mapreduce",
  "--cov=imbue.skitwright",
  "--cov=imbue.minds",
  "--cov=imbue.slack_exporter",
  "--cov=imbue.remote_service_connector",
  "--cov=imbue.concurrency_group",
  "--cov=imbue.modal_proxy",
  "--cov=imbue.mngr_wait",
  "--cov=imbue.mngr_robinhood",
  "--cov=imbue.mngr_vps",
  "--cov=imbue.mngr_vultr",
  "--cov=imbue.mngr_aws",
  "--cov=imbue.mngr_ovh",
  "--cov=imbue.mngr_gcp",
  "--cov=imbue.mngr_azure",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.ruff]
line-length = 119
exclude = [
    "**/__snapshots__/**",
    "scripts/style_guide.py",
    "frpc_test",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "UP006",
    "UP007",
#    "T",
#    "SIM",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
order-by-type = false
known-first-party = [
    "imbue",
    "imbue_common",
    "mngr",
    "sculptor_desktop",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.ty.src]
exclude = ["scripts/style_guide.py", "contrib/", "apps/minds/scripts/"]

[tool.ty.environment]
extra-paths = ["scripts"]

[tool.coverage.run]
source = ["imbue"]
parallel = true
concurrency = ["multiprocessing", "thread"]
omit = [
    "*_test.py",
    "test_*.py",
    "*/tests/*",
    "*/conftest.py",
    # Test utility modules contain helpers only used by tests
    "*/testing.py",
    "*/utils/plugin_testing.py",
    "*/conftest_hooks.py",
    "*/ratchet_testing/*",
    # Modal provider plugin requires network access for testing
    "libs/mngr_modal/imbue/mngr_modal/*",
    # Docker provider requires a Docker daemon for testing
    "libs/mngr/imbue/mngr/providers/docker/instance.py",
    "libs/mngr/imbue/mngr/providers/docker/volume.py",
    # Lima provider requires Lima/QEMU for full integration testing
    "libs/mngr_lima/imbue/mngr_lima/instance.py",
    "libs/mngr_lima/imbue/mngr_lima/limactl.py",
    # Mind deploy modules run on Modal and require infrastructure to test
    "apps/minds/imbue/minds/deploy/cron_runner.py",
    "apps/minds/imbue/minds/deploy/remote_runner.py",
    "apps/minds/imbue/minds/deploy/verification.py",
    # Minds telegram/supertokens integrations require external services to test
    "apps/minds/imbue/minds/telegram/credential_extractor.py",
    "apps/minds/imbue/minds/telegram/bot_creator.py",
    "apps/minds/imbue/minds/telegram/injector.py",
    "apps/minds/imbue/minds/desktop_client/supertokens_routes.py",
    "apps/minds/imbue/minds/desktop_client/tunnel_token_injection.py",
    # Minds Docker state-container teardown shells out to the `docker` CLI and
    # needs a real daemon -- exercised via a docker-marked test, not offload.
    "apps/minds/imbue/minds/envs/docker_cleanup.py",
    # Minds deployment_tests importable helpers are exercised only by the
    # minds_deployment / minds_services pytest suites against real cloud,
    # which are excluded from `just test-offload`. No path through the
    # standard test run reaches these files.
    "apps/minds/imbue/minds/deployment_tests/*",
    # mngr_claude keychain sync requires a real macOS keychain to test
    "libs/mngr_claude/imbue/mngr_claude/resources/sync_keychain_credentials.py",
    # Schedule plugin cron runner and verification run on Modal and require infrastructure to test
    "libs/mngr_schedule/imbue/mngr_schedule/implementations/modal/cron_runner.py",
    "libs/mngr_schedule/imbue/mngr_schedule/implementations/modal/verification.py",
    # don't bother with anything in scripts
    "scripts/*",
]

[tool.coverage.paths]
# Map sandbox paths back to local paths so coverage data collected on
# offload Modal sandboxes (rooted at /code/mngr/) can be combined locally.
source = [
    ".",
    "/code/mngr/",
]

[tool.importlinter]
root_packages = [
    "imbue.mngr",
    "imbue.minds",
    "imbue.mngr_imbue_cloud",
]

[[tool.importlinter.contracts]]
name = "mngr layers contract"
type = "layers"
layers = [
    "imbue.mngr.main",
    "imbue.mngr.cli",
    "imbue.mngr.api",
    "imbue.mngr.agents",
    "imbue.mngr.providers",
    "imbue.mngr.hosts",
    "imbue.mngr.plugins",
    "imbue.mngr.interfaces",
    "imbue.mngr.config",
    "imbue.mngr.utils",
    "imbue.mngr.errors",
    "imbue.mngr.primitives",
    "imbue.mngr.resources",
]

[[tool.importlinter.contracts]]
name = "minds layers contract"
type = "layers"
layers = [
    "imbue.minds.desktop_client",
    "imbue.minds.cli",
    "imbue.minds.core",
    "imbue.minds.interfaces",
    "imbue.minds.config",
    "imbue.minds.errors",
    "imbue.minds.utils",
    "imbue.minds.primitives",
]

[[tool.importlinter.contracts]]
name = "mngr_imbue_cloud layers contract"
type = "layers"
layers = [
    "imbue.mngr_imbue_cloud.plugin",
    "imbue.mngr_imbue_cloud.cli",
    "imbue.mngr_imbue_cloud.bake",
    "imbue.mngr_imbue_cloud.providers",
    "imbue.mngr_imbue_cloud.hosts",
    "imbue.mngr_imbue_cloud.slices",
    "imbue.mngr_imbue_cloud.connector",
    "imbue.mngr_imbue_cloud.config",
    "imbue.mngr_imbue_cloud.data_types",
    "imbue.mngr_imbue_cloud.errors",
    "imbue.mngr_imbue_cloud.primitives",
]
