[project]
name = "minds"
version = "0.1.0"
description = "Specialized AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "cheroot>=10.0",
    "click>=8.0",
    "click-option-group>=0.5.6",
    "concurrency-group",
    "flask>=3.0",
    "httpx>=0.27.0",
    "imbue-common",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "jinjax>=0.45",
    "loguru",
    "imbue-mngr",
    "imbue-mngr-aws",
    "imbue-mngr-forward",
    "imbue-mngr-latchkey",
    "imbue-mngr-ovh",
    "imbue-mngr-vps",
    "modal>=1.4.3",
    "paramiko>=3.0",
    "playwright>=1.40.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "tenacity",
    "tomlkit>=0.12.0",
    "telethon>=1.40.0",
    "werkzeug>=3.0",
    "wsgidav>=4.3",
    "sentry-sdk>=2.59.0",
    "traceback-with-variables>=2.0",
]
license = {text = "FCL-1.0-MIT"}
license-files = [
    "LICENSE",
]

[project.scripts]
minds = "imbue.minds.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
concurrency-group = { workspace = true }
imbue-mngr = { workspace = true }
imbue-mngr-aws = { workspace = true }
imbue-mngr-forward = { workspace = true }
imbue-mngr-latchkey = { workspace = true }
imbue-mngr-ovh = { workspace = true }
imbue-mngr-vps = { workspace = true }
imbue-common = { workspace = true }

# Force-include the compiled Tailwind stylesheet for the desktop client. It is
# built from static/app.css by `just minds-css` (pnpm run build:css) and is
# gitignored, so hatchling would otherwise omit it from the wheel. `scripts/
# build.js` rebuilds it before packaging the Electron app.
[tool.hatch.build]
artifacts = [
    "imbue/minds/desktop_client/static/app.min.css",
]

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/testing.py"]

# Shared pytest settings (markers, filterwarnings, coverage report config)
# are centralized in:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# The settings below remain here because they are read from pyproject.toml
# before any hooks run: addopts, coverage.run, inline-snapshot, timeout_func_only.
[tool.pytest.ini_options]
timeout_func_only = true
# Use xunit1 format to enable record_xml_attribute fixture for consistent classnames
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--cov=imbue.minds",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing", "thread"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/utils/testing.py",
  # External service interaction modules -- tested via acceptance/release tests.
  # Pure functions within these modules are tested in the corresponding *_test.py files.
  "*/telegram/credential_extractor.py",
  "*/telegram/bot_creator.py",
  "*/telegram/injector.py",
  # Cloudflare tunnel token inject/clear shell out via `mngr exec` -- exercised
  # via acceptance/release tests. The path constant is pinned in the *_test.py.
  "*/desktop_client/tunnel_token_injection.py",
  # SuperTokens routes require a live Core connection -- tested via release test.
  "*/desktop_client/supertokens_routes.py",
  # Docker state-container teardown shells out to the `docker` CLI and needs a
  # real daemon -- exercised via a docker-marked test. The pure functions
  # (user-id resolution, name building) are tested in docker_cleanup_test.py.
  "*/envs/docker_cleanup.py",
  # The deployment_tests importable helper package is exercised only by the
  # minds_deployment / minds_services pytest suites against real cloud
  # (see apps/minds/deployment_tests/). Those suites are excluded from
  # `just test-offload` so the helpers can't reach coverage from offload runs.
  "*/imbue/minds/deployment_tests/*",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.ty.src]
exclude = ["scripts/"]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.12"
strict = ["**/*.py"]

[tool.coverage.report]
fail_under = 70
