[project]
name = "mngr-minds-eval"
version = "0.1.0"
description = "Minds eval harness: launch self-completing eval batches on Modal, snapshot each turn to S3, inspect and evaluate them."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "anthropic>=0.40",
]

[project.scripts]
minds-evals = "imbue.mngr_minds_eval.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py"]
