[project]
name = "open-seer"
version = "0.1.0"
description = "Autonomous Sentry-error-to-PR system: hourly deterministic tick on Modal; all judgment lives in agent skills."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "modal",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/testing.py"]

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["."]
addopts = [
    "--cov=tick",
    "--cov-report=term-missing",
]

[tool.coverage.run]
omit = [
    "*_test.py",
    "test_*.py",
    "*/tests/*",
    "*/conftest.py",
]
