[project]
name = "mng-tip"
version = "0.1.0"
description = "Tip plugin for mng - displays usage tips during long-running commands"
requires-python = ">=3.11"
dependencies = [
    "mng",
]

[project.entry-points.mng]
tip = "imbue.mng_tip.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
mng = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
