[project]
name = "imbue-mngr-azure"
version = "0.1.0"
description = "Azure provider backend plugin for mngr"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbue-mngr==0.2.12",
    "imbue-mngr-vps-docker==0.1.5",
    "azure-identity>=1.25",
    "azure-mgmt-compute>=37",
    "azure-mgmt-network>=30",
    "azure-mgmt-resource>=25",
    "azure-core>=1.41",
]

[project.entry-points.mngr]
azure = "imbue.mngr_azure.backend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/testing.py"]

[tool.uv.sources]
imbue-mngr = { workspace = true }
imbue-mngr-vps-docker = { workspace = true }

[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--cov=imbue.mngr_azure",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.coverage.report]
fail_under = 60
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
