[project]
name = "imbue-mngr-claude-usage"
version = "0.1.6"
description = "Claude usage data provider for `mngr usage` (per-agent statusline shim that captures rate-limits + cost + session_id)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbue-mngr==0.2.17",
    "imbue-mngr-claude==0.2.17",
    "imbue-mngr-usage==0.1.6",
]

[project.entry-points.mngr]
claude_usage = "imbue.mngr_claude_usage.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/testing.py"]

[tool.hatch.build.targets.wheel.force-include]
"imbue/mngr_claude_usage/resources/claude_statusline.sh" = "imbue/mngr_claude_usage/resources/claude_statusline.sh"
"imbue/mngr_claude_usage/resources/claude_usage_writer.sh" = "imbue/mngr_claude_usage/resources/claude_usage_writer.sh"

[tool.uv.sources]
imbue-mngr = { workspace = true }
imbue-mngr-claude = { workspace = true }
imbue-mngr-usage = { workspace = true }

[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--cov=imbue.mngr_claude_usage",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing", "thread"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/utils/testing.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.12"
strict = ["**/*.py"]

[tool.coverage.report]
fail_under = 95
