[project]
name = "imbue-mngr-foreman"
version = "0.1.0"
description = "Always-on web remote control for mngr agents (list + chat + send)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbue-mngr==0.2.17",
    "imbue-common==0.1.20",
    "concurrency-group==0.1.20",
    "click",
    "flask>=3.0",
    "flask-sock>=0.7",
    "loguru",
    "pluggy",
    "pydantic>=2.0",
]

[project.entry-points.mngr]
foreman = "imbue.mngr_foreman.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
artifacts = ["imbue/mngr_foreman/static/**"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/testing.py"]

[tool.uv.sources]
imbue-mngr = { workspace = true }
imbue-common = { workspace = true }
concurrency-group = { workspace = true }

[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--durations=20",
  "--timeout=30",
  "--timeout-method=signal",
]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
