[project]
name = "imbue-mngr-gcp"
version = "0.1.2"
description = "GCP Compute Engine provider backend plugin for mngr"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbue-mngr==0.2.17",
    "imbue-mngr-vps==0.1.10",
    # Used for the best-effort 'gcloud config get compute/zone' probe in config.py
    # (run through a ConcurrencyGroup rather than subprocess directly).
    "concurrency-group==0.1.20",
    # google-cloud-compute ships a py.typed marker, so botocore-style stub
    # packages are not needed -- the SDK's request/response types are checked
    # directly.
    "google-cloud-compute>=1.19",
    # Backs the offline ``host_dir`` mirror written at ``mngr stop`` (the GCP
    # analog of AWS S3 / Azure Blob storage). See ``state_bucket.py``.
    "google-cloud-storage>=2.18",
    "google-auth>=2.28",
]

[project.entry-points.mngr]
gcp = "imbue.mngr_gcp.backend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/testing.py"]

[tool.uv.sources]
imbue-mngr = { workspace = true }
imbue-mngr-vps = { workspace = true }
concurrency-group = { workspace = true }

[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--cov=imbue.mngr_gcp",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.coverage.report]
fail_under = 60
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
