[project]
name = "imbue-mngr-imbue-cloud"
version = "0.1.6"
description = "Imbue Cloud provider backend plugin for mngr"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbue-mngr==0.2.17",
    "imbue-mngr-vps==0.1.10",
    "imbue-mngr-lima==0.1.10",
    "imbue-common==0.1.20",
    "concurrency-group==0.1.20",
    "httpx>=0.27.0",
    "loguru",
    "pluggy",
    "pydantic>=2.0",
    "click",
    "click-option-group",
    "paramiko>=3.0",
    "psutil",
    "psycopg2-binary",
]

[project.entry-points.mngr]
imbue_cloud = "imbue.mngr_imbue_cloud.plugin.entrypoints"
imbue_cloud_slice = "imbue.mngr_imbue_cloud.plugin.slice_entrypoints"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/testing.py"]

[tool.uv.sources]
imbue-mngr = { workspace = true }
imbue-mngr-vps = { workspace = true }
imbue-mngr-lima = { workspace = true }
imbue-common = { workspace = true }
concurrency-group = { workspace = true }

[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--cov=imbue.mngr_imbue_cloud",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing", "thread"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.coverage.report]
# Pinned to the current coverage of the new plugin's tested modules. Bring this
# up incrementally as more of host.py / instance.py / cli/* gain unit tests.
fail_under = 45
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
