[project]
name = "imbue-mngr-lima"
version = "0.1.10"
description = "Lima VM provider backend plugin for mngr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbue-mngr==0.2.17",
    "psutil>=5.9",
    "pyyaml>=6.0",
]

[project.entry-points.mngr]
lima = "imbue.mngr_lima.backend"

[project.entry-points.resource_guards]
lima = "imbue.mngr_lima.register_guards:register_lima_guard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/testing.py"]

[tool.uv.sources]
imbue-mngr = { workspace = true }

[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--cov=imbue.mngr_lima",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/utils/testing.py",
  # Requires Lima/QEMU for integration testing
  "*/mngr_lima/instance.py",
  "*/mngr_lima/limactl.py",
  "*/mngr_lima/testing.py",
  # Release-test-only drivers: run a real Lima VM under @pytest.mark.release, which
  # per-PR CI does not run, so they are structurally uncoverable in the offload gate.
  "*/mngr_lima/_lima_btrfs_release_helper.py",
  "*/mngr_lima/_lima_host_start_race_helper.py",
]

[tool.coverage.report]
fail_under = 65
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/utils/testing.py",
  "*/mngr_lima/instance.py",
  "*/mngr_lima/limactl.py",
  "*/mngr_lima/testing.py",
  # Release-test-only drivers (see [tool.coverage.run] omit above).
  "*/mngr_lima/_lima_btrfs_release_helper.py",
  "*/mngr_lima/_lima_host_start_race_helper.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.12"
strict = ["**/*.py"]
